<resources>
    <string name="app_name">RSG-Wijzigingen</string>
    <string name="app_version">v1.6.0</string>
    <string name="overApp">Over RSG-Wijzigingen v1.6.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_check">Vernieuw</string>
    <string name="internet_error">Er was een verbindingsfout</string>
    <string name="geenWijzigingen">Er zijn geen wijzigingen</string>
    <string name="geenKlas">Voer een klas in in het instellingenscherm.</string>
    <string name="geenClusters">Er zijn geen clusters ingevoerd.</string>
    <string name="overDezeApp">Roosterwijzigingchecker is een app die ontwikkeld is door een leerling van de RSG Tromp Meesters te Steenwijk. De app is in eerste instantie ontwikkeld voor de RSG Tromp Meesters zelf.
        \n \nDe app is gemaakt voor het profielwerkstuk. Daarom vraagt de ontwikkelaar geen geld voor het gebruik van deze app, en stopt hij er geen advertenties in.
        \n \nIndien je graag dingen terug wilt zien of een bug te melden hebt, kan je contact opnemen via de "Feedback"-knop in het instellingenscherm.
        \nAlle broncode is daarnaast terug te lezen op Github, je kan deze vinden via de link hieronder
        \n \nTenslotte, bedankt voor het gebruik van RSG-Wijzigingen!</string>
    <string name="clusterUitleg">In deze app is een mogelijkheid om op clusters te filteren. Clusters zijn de groepen waarin je leert, zoals dat in de bovenbouw gedaan wordt. \n Als je in de bovenbouw zit, is het aanbevolen deze functie in te schakelen.
        \n \n Als je clusterfiltering inschakelt, moet je ze later in het instellingenscherm instellen.</string>
    <string name="instellingenInleiding">Hieronder lopen we de belangrijkste instellingen even door. Alle instellingen zijn later aan te passen in het instellingenscherm. </string>
    <string name="wizardOndertitel">Om te beginnen lopen we de voorwaarden en de instellingen even met je door. \n Door het gebruiken van deze app of door op \"volgende\" te drukken, ga je automatisch akkoord met onderstaande voorwaarden, die later terug te lezen zijn via het instellingenmenu.</string>
    <string name="voorwaarden">De ontwikkelaar is, noch direct noch indirect, aansprakelijk voor beslissingen en/of handelingen die gedaan zijn naar aanleiding van of beïnvloed
    door het gebruik van RSG-Wijzigingen. De ontwikkelaar heeft geen enkele aansprakelijkheid. De gebruiker heeft de volle aansprakelijkheid voor het gebruik van RSG-Wijzigingen.
    \n \n Meldingen en/of inhoud van RSG-Wijzigingen zullen niet en mogen niet gebruikt worden voor discussies of andere redevoeringen met het schoolpersoneel. Tevens biedt de inhoud van deze app geen enkele grond voor argumenten.  </string>
    <string name="verkeerdeKlas">De klas die je hebt ingevoerd, bevat een letter als eerste teken. Sinds het schooljaar
    2013/2014 zijn de klasnamen anders, waardoor het eerste teken het jaar is waarin je zit. \n \n
    Wil je je klas automatisch laten corrigeren of wil je deze handmatig aanpassen?</string>
    <string name="geenClusterMelding">Clusterfiltering is ingeschakeld, maar er zijn geen clusters ingevuld. Vul clusters
    in of schakel clusterfiltering uit.</string>
    <string name="klasMeerDan4Tekens">De klas die je hebt gekozen bevat meer dan 4 tekens. Klassen kunnen
    niet meer dan 4 tekens bevatten. Let op dat je geen enters of spaties in je klas hebt staan. Pas je klas
    aan in het instellingenscherm.</string>
    <string name="settingsHelpBovenImage">Hier kunnen je <b>clusters</b> gewijzigd worden. \n\n<b>Clusters</b> zijn
    leergroepen binnen de bovenbouw. Omdat hier vaak meerdere klassen per vak aanwezig zijn, hebben de clusternamen vaak nummers erin,
    zoals dutl2 of latl9. \nIndien je in de bovenbouw zit, kan je je clusters vinden op je rooster of in Magister.
    \nAls je in Magister naar je rooster gaat, zie je daar je vakken, zoals V5<b>schk4</b>, zoals in onderstaande afbeelding. </string>
    <string name="hulpOnderImage">Het onderstreepte gedeelte op bovenstaande screenshot dien je in te voeren in dit scherm. Een lijstje kan dus zijn: \nCluster 1: <b>latl9</b>
    \nCluster 2: <b>schk4</b> \nCluster 3: <b>ne<u>tl</u></b> \nCluster 4: <b>nlt1</b> \nCluster 5: <b>en<u>tl</u></b>
    \n\nDe regel gaat niet op bij Engels en Nederlands, daar dient entl en netl te worden ingevoerd.\n\nDe volgorde van invoeren is niet van belang.</string>
    <string name="timePickerSum">Tijd waarop automatisch wordt gezocht naar updates</string>
    <string name="autoZoekenTutorialUitleg">Deze app biedt de mogelijkheid om 2x per dag automatisch naar roosterwijzigingen te zoeken, en je een notificatie te geven. De zoektijden kan je
    naar wens instellen (vlak voordat je naar school gaat bijvoorbeeld). Deze tijden kan je instellen in het instellingenscherm.</string>
    <string name="jouspLicentie">The MIT License\n
Copyright © 2009 - 2013 Jonathan Hedley (jonathan@hedley.net)
\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="androidSupportLibLicentie">
        Copyright © 2011 The Android Open Source Project
        \n\nLicensed under the Apache License, Version 2.0 (the "License");\n
        you may not use this file except in compliance with the License.\n
        You may obtain a copy of the License at

     \n\nhttp://www.apache.org/licenses/LICENSE-2.0

\n\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.
    </string>
    <string name="wizarDroidLicentie">
        Copyright © 2013 Nimrod Dayan (CodePond.org)

\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"),
\nto deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
\nand/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
\nINCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
\nPARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
\nHOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
\nOF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
\nSOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
    <string name="MaterialDialogsLicentie">
        The MIT License (MIT)

\n\nCopyright © 2015 Aidan Michael Follestad

\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
\nof this software and associated documentation files (the "Software"), to deal
\nin the Software without restriction, including without limitation the rights
\nto use, copy, modify, merge, publish, distribute, sublicense, and/or sell
\ncopies of the Software, and to permit persons to whom the Software is
\nfurnished to do so, subject to the following conditions:

\n\nThe above copyright notice and this permission notice shall be included in all
\ncopies or substantial portions of the Software.

\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
\nIMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
\nFITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
\nAUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
\nLIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
\nOUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
\nSOFTWARE.
    </string>
    <string name="TimePickerLicentie">
        Copyright 2014 Paul Stöhr
\nCopyright 2013 The Android Open Source Project

\n\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at

   \n\nhttp://www.apache.org/licenses/LICENSE-2.0

\n\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.
    </string>
    <string name="SCV_License">
        Copyright 2015 Dean Wild

\n\nLicensed under the Apache License, Version 2.0 (the "License");
\nyou may not use this file except in compliance with the License.
\nYou may obtain a copy of the License at

   \n\nhttp://www.apache.org/licenses/LICENSE-2.0

\n\nUnless required by applicable law or agreed to in writing, software
\ndistributed under the License is distributed on an "AS IS" BASIS,
\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
\nSee the License for the specific language governing permissions and
\nlimitations under the License.</string>
    <string name="SCV_fab">Met deze knop kan je zoeken naar je persoonlijke roosterwijzigingen</string>
    <string name="SCV_tab_algemeen">Hiermee kan je naar de pagina met alle wijzigingen gaan</string>
    <string name="Google_License">
        Copyright 2015 Google Inc. All Rights Reserved.

     \n\nLicensed under the Apache License, Version 2.0 (the "License");
     \nyou may not use this file except in compliance with the License.
     \nYou may obtain a copy of the License at

         \n\nhttp://www.apache.org/licenses/LICENSE-2.0

     \n\nUnless required by applicable law or agreed to in writing, software
     \ndistributed under the License is distributed on an "AS IS" BASIS,
     \nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     \nSee the License for the specific language governing permissions and
     \nlimitations under the License.
    </string>
</resources>